--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,6 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:2.3.0"
 
     implementation "io.reactivex.rxjava2:rxandroid:2.0.1"
+
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 }
