--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,4 +50,6 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+
+    implementation 'com.nefrit:ratingview:1.0.2'
 }
