--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+
 
 apply plugin: 'kotlin-android-extensions'
 
@@ -46,10 +48,10 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
 
     implementation 'com.jakewharton:butterknife:10.1.0'
-    annotationProcessor "com.jakewharton:butterknife-compiler:10.1.0"
+    kapt "com.jakewharton:butterknife-compiler:10.1.0"
 
     implementation 'com.github.bumptech.glide:glide:4.10.0'
-    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    kapt 'com.github.bumptech.glide:compiler:4.10.0'
 
     implementation 'com.nefrit:ratingview:1.0.2'
 }
