--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
+plugins {
+    id("com.diffplug.gradle.spotless") version "3.26.1"
+}
 apply plugin: 'com.android.application'
-
 apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
@@ -23,6 +25,13 @@ android {
     compileOptions {
         sourceCompatibility = 1.8
         targetCompatibility = 1.8
+    }
+}
+
+spotless {
+    java {
+        target '**/*.java'
+        removeUnusedImports()
     }
 }
 
